--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "mobven-movie-app",
+  "name": "movie-app", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-fontawesome": "^1.6.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
